# alegoria

./: .dockerignore  .flaskenv  .gitignore  README  docker-compose.yml  eslint.config.js  flake.nix  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.github/workflows/: docker-publish.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  entrypoint.sh
src/backend/alegoria/: __init__.py  api.py  downloader.py
src/frontend/: index.html
src/frontend/public/: config.json
src/frontend/src/: App.tsx  hooks.ts  index.css  page-schema.ts  store.ts  vite-env.d.ts
src/frontend/src/components/: Bullet.tsx  Button.tsx  ErrorContainer.tsx  LoadingContainer.tsx  NoDataContainer.tsx  Select.tsx  UserAvatar.tsx  index.ts
src/frontend/src/components/layout/: ErrorContainer.tsx  Layout.tsx  Navbar.tsx  NoDataContainer.tsx  Sidebar.tsx  UserAvatar.tsx  index.ts
src/frontend/src/components/pages/: Category.tsx  Home.tsx  Post.tsx  index.ts
src/frontend/src/components/posts/: Board.tsx  Gallery.tsx  Image.tsx  Items.tsx  PostContainer.tsx  Search.tsx  User.tsx  UserBoard.tsx  UserGallery.tsx  UserInfo.tsx  UserItems.tsx  UserPost.tsx  index.ts
src/frontend/src/types/: categories.ts  directlink.ts  extractors.ts  facebook.ts  image.ts  index.ts  instagram.ts  pages.ts  patreon.ts  pinterest.ts  post.ts  search.ts  tiktok.ts  user.ts  vsco.ts  ytdl.ts
src/frontend/src/utils/: index.ts
