[project]
name = "alegoria"
version = "0.1.0"
description = "Web front-end to image galleries and collections from several hosting sites"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "gallery-dl>=1.30.10",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "yt-dlp[curl-cffi,default]>=2025.11.12",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch]
build.packages = ["src/backend/alegoria"]
